# FORGE

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  forge.wal
.anchor/: constitution.anchor  constitution.anchor.example  mitigation.anchor  policy.anchor.example
.anchor/domains/: agentic.anchor  alignment.anchor  ethics.anchor  legal.anchor  operational.anchor  privacy.anchor  security.anchor  shared.anchor  supply_chain.anchor
.anchor/frameworks/: FINOS_Framework.anchor  NIST_AI_RMF.anchor  OWASP_LLM.anchor
.anchor/government/: CFPB_Regulations.anchor  EU_AI_Act.anchor  FCA_Regulations.anchor  RBI_Regulations.anchor  SEBI_Regulations.anchor  SEC_Regulations.anchor
.anchor/reports/: governance_audit.md
.anchor/violations/: governance_violations.txt
src/: main.rs  state.rs
src/api/: auth.rs  delete.rs  health.rs  insert.rs  mod.rs  query.rs  query_one.rs  update.rs
src/auth/: apikey.rs  mod.rs  oauth2.rs
src/config/: mod.rs
src/engine/: idempotency.rs  mod.rs  wal.rs
src/format/: data.rs  header.rs  index.rs  mod.rs  schema.rs
src/storage/: http.rs  mod.rs
